--- a/pom.xml
+++ b/pom.xml
@@ -86,17 +86,11 @@
         </dependency>
 	    
 	    
-	    
-	    
-	    
-	    
-	    
-	    
-	    
-	    
-	    
-	    
-	    
+	<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>    
+	    	    
 	    
 	     <!--<dependency>
         <groupId>javax.servlet</groupId>
